[package]
name = "tokio-async-utils"
version = "0.1.2"
authors = ["nxy7 <danielukd@gmail.com>"]
# homepage = "https://docs.rs/tokio-async-utils/latest/tokio_async_utils/"
documentation = "https://docs.rs/tokio-async-utils/latest/tokio_async_utils/"
repository = "https://github.com/nxy7/async-utils"
edition = "2021"
license = "MIT"
keywords = ["async", "tokio", "util"]
description = "Async utils such as TaskHandle type that aborts task on handle drop."

[dependencies]
tokio = { version = "1.36.0", features = [
  "time",
  "sync",
  "test-util",
  "rt",
  "macros",
] }
